# atheon-in-action

./: Dockerfile  compose.yaml  pyproject.toml
app/app/: main.py
app/static/: index.html
